<resources>
    <string name="app_name">WekastAndroidDongle</string>
    <string name="hotspotIp">192.168.43.1</string>
    <string name="hotspotPort">8888</string>
    <string name="socketServerPort">8888</string>
    <string name="addressEditTextHint">Server ip address</string>
    <string name="portEditTextHint">Server port number</string>
    <string name="connectButtonText">Connect...</string>
    <string name="clearButtonText">Clear</string>
    <string name="captionViewText">DONGLE</string>

    <!-- Default Access Point settings  -->
    <string name="ssid">wekast</string>
    <string name="pass">12345678</string>

    <string name="TAG">wekast</string>

    <string name="button">Button</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
