<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".activity.TestConnWithClientActivity" >

<TextView
    android:id="@+id/captionView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:text="@string/captionViewText"
    android:textAlignment="center"
    android:textSize="20dp"
    android:textStyle="bold"
    android:textColor="#000000" />

<EditText
    android:id="@+id/addressEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/hotspotIp"
    android:hint="@string/addressEditTextHint"
    android:textSize="20dp" />

<EditText
    android:id="@+id/portEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/hotspotPort"
    android:hint="@string/portEditTextHint"
    android:textSize="20dp" />

<Button
    android:id="@+id/connectButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/connectButtonText"
    android:textSize="20dp" />

<Button
    android:id="@+id/clearButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/clearButtonText"
    android:textSize="20dp" />

<TextView
    android:id="@+id/responseTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp" />
</ScrollView>
</LinearLayout>
