<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingTop="20dp"
android:paddingLeft="20dp"
android:paddingRight="20dp" >

<TextView
    android:id="@+id/captionView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:text="@string/captionViewText"
    android:textAlignment="center"
    android:textSize="20dp"
    android:textStyle="bold"
    android:textColor="#000000"
    android:layout_alignParentTop="true" />

<EditText
    android:id="@+id/addressEditText"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/hotspotIp"
    android:hint="@string/addressEditTextHint"
    android:textSize="20dp"
    android:layout_below="@id/captionView"
    />

<EditText
    android:id="@+id/portEditText"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/hotspotPort"
    android:hint="@string/portEditTextHint"
    android:layout_below="@id/addressEditText"
    android:textSize="20dp" />

<Button
    android:id="@+id/connectButton"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/connectButtonText"
    android:layout_below="@id/captionView"
    android:layout_alignParentRight="true"
    android:textSize="20dp" />

<Button
    android:id="@+id/clearButton"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:text="@string/clearButtonText"
    android:layout_below="@id/connectButton"
    android:layout_alignParentRight="true"
    android:textSize="20dp" />

<TextView
    android:id="@+id/responseTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/portEditText" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/responseTextView" >
    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp" />
</ScrollView>

</RelativeLayout>